2011-05-05  Prasanth Ullattil  <prasanth.ullattil@nokia.com>

        Reviewed by Simon Hausmann.

        Install correct header files for webkit.

        Since WebKit is no longer inside Qt, we can remove the detection for
        that.

        [Qt] Install targets are not working correctly for modularized Qt and QtWebkit
        https://bugs.webkit.org/show_bug.cgi?id=57621

        * Source/sync.profile:

2011-05-05  Adam Barth  <abarth@webkit.org>

        Remove a couple stray mentions of WML that I missed before.

        * configure.ac:

2011-05-05  Alexis Menard  <alexis.menard@openbossa.org>

        Reviewed by Benjamin Poulain.

        [Qt] Make QtWebKit build when using gcc 4.6.0
        https://bugs.webkit.org/show_bug.cgi?id=60265

        If QtWebKit is compiled with gcc 4.6.0 and the build is not done
        with c++0x support we need to deactivate warnings about compatibility.
        Some WebKit types have names which conflicts with upcoming c++0x
        types. If QtWebKit is built with c++0x support, WebKit has code to
        fallback to the standard type rather than the WebKit implementation.
        For example nullptr will be the one of the std if build options turns on
        c++0x support.

        * Source/WebKit.pri:

2011-05-04  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Fix warnings in webkit.m4 with autoconf 2.68
        https://bugs.webkit.org/show_bug.cgi?id=60189

        Use AC_LANG_SOURCE when passing source code to AC_COMPILE_IFELSE
        to remove warnings.

        * Source/autotools/webkit.m4: ditto.

2011-05-04  Martin Robinson  <mrobinson@igalia.com>

        Fix the WebKitGTK+ build.

        * configure.ac: Added option parsing code for loading touch icons.

2011-05-03  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

        Reviewed by Xan Lopez.

        [CMAKE] Remove C++0x compat mode warnings for GCC >= 4.6.0
        https://bugs.webkit.org/show_bug.cgi?id=60041
