@@ -1,3 +1,9 @@
+2011-05-05  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Unreviewed build fix. Add LocalizedDateNone.cpp to the build.
+
+        * wscript:
+
 2011-05-05  Prasanth Ullattil  <prasanth.ullattil@nokia.com>
 
         Reviewed by Simon Hausmann.
